# PPInference

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mini_bayes_ppi/: __init__.py  core.py  example_coverage_viz.py  io.py  viz.py
tests/: test_core.py
